express-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: cna-express
spec:
  type: ClusterIP
  selector:
    app: cna-express
  ports:
    - port: 8080
      name: http
      protocol: TCP
      targetPort: 8080
