web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cna-web  
spec:
  type: ClusterIP
  selector:
    app: cna-web
  ports:
    - port: 3000
      name: http
      protocol: TCP
      targetPort: 3000
