web-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cna-web
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: cna-web.082280e01484436fab9e.eastus.aksapp.io
    http:
      paths:
      - path: /  
        pathType: Prefix
        backend:
          service:  
            name: cna-web
            port:
              name: http
